  threads.
* Several new command line options (all authors)

-------------------------------------------------
V1.3 2013-11-18 Markus Schordan and Adrian Prantl
-------------------------------------------------
 * support for binary mode (RERS-specific, calls the linked original program)

-----------------------------------------------------------
V1.4 2014-11-18 Markus Schordan, Adrian Prantl, Marc Jasper
-----------------------------------------------------------
  * integration of SPOT library for LTL verification (Marc Jasper)
  * counter example generation (Marc Jasper)
  * support of new command line options for LTL verification (Marc Jasper)
  * support for different search strategies in state space (Markus Schordan)

-----------------------------------------------------------
V1.5 2014-02-26 Markus Schordan, Adrian Prantl, Marc Jasper
-----------------------------------------------------------
  * extraction of floating point variable update-sequence (Markus Schordan)
  * new command line options for specialization of function parameters (Markus Schordan)

-----------------------------------------------------------
V1.6 2015-09-14 Markus Schordan, Adrian Prantl, Marc Jasper
-----------------------------------------------------------
  * pattern-based input-sequence generation (Marc Jasper)
  * reachability checking of input-sequences (Marc Jasper)
  * data race detection in OpenMP for loops (Markus Schordan)
  * normalization of internal program representation (Markus Schordan)

-----------------------------------------------------------
V1.7 2015-12-xx in preparation
-----------------------------------------------------------
  * added verification error feature command line option (as required
    for SV-COMP) [in preparation]
  * added support for the following language features:
    [in preparation]
  * command line option changes:
    [in preparation]
    - removed command line options: --ltl-verifier, --verify
  * bugfixes:
    [in preparation]