@@ -8,7 +8,6 @@ using namespace std;
 /////////////////////////////////////////////////
 boost::program_options::variables_map args;
 BoolOptions boolOptions;
-int option_debug_mode=0;
 ResultsFormat resultsFormat=RF_RERS2012;
 
 /////////////////////////////////////////////////
